fix logo width for long logos on iphone5

--- a/wp-content/themes/MiniMakerFaire/less/header.less
+++ b/wp-content/themes/MiniMakerFaire/less/header.less
@@ -77,8 +77,8 @@ body.slide-active {
       margin-top: 5px;
       top: 50%;
       transform: translateY(-50%);
-		 @media (min-width:768px) {
-			 width: 100%;
+		 @media (max-width:360px) {
+			 max-width: 200px;
 		 }
     }
   }
